--- a/UNet_with_ResNet34.ipynb
+++ b/UNet_with_ResNet34.ipynb
@@ -33,27 +33,23 @@
     "# ----------------------------\n",
     "# Config \n",
     "# ----------------------------\n",
-    "train_image_dirs = [\"/home/lk57288c/RR_WNET/AV_MERGED/images\"]\n",
-    "train_label_dirs = [\"/home/lk57288c/RR_WNET/AV_MERGED/labels\"]\n",
-    "train_mask_dirs  = [\"/home/lk57288c/RR_WNET/AV_MERGED/masks\"]\n",
+    "train_image_dirs = [\"DRIVE_AV/training/images\", \n",
+    "                    \"DRIVE_AV/test/images\",\n",
+    "                    \"HRF_AV/test/images\",\n",
+    "                    \"HRF_AV/test/images\"\n",
+    "                    ]\n",
     "\n",
-    "# train_image_dirs = [\"/home/lk57288c/2 Stage_Model/DRIVE_AV/training/images\", \n",
-    "#                     \"/home/lk57288c/2 Stage_Model/DRIVE_AV/test/images\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/images\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/images\"\n",
-    "#                     ]\n",
+    "train_label_dirs = [\"DRIVE_AV/training/label\", \n",
+    "                    \"DRIVE_AV/test/label\",\n",
+    "                    \"HRF_AV/test/label\",\n",
+    "                    \"HRF_AV/test/label\"\n",
+    "                    ]\n",
     "\n",
-    "# train_label_dirs = [\"/home/lk57288c/2 Stage_Model/DRIVE_AV/training/label\", \n",
-    "#                     \"/home/lk57288c/2 Stage_Model/DRIVE_AV/test/label\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/label\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/label\"\n",
-    "#                     ]\n",
-    "\n",
-    "# train_mask_dirs  = [\"/home/lk57288c/2 Stage_Model/DRIVE_AV/training/mask\", \n",
-    "#                     \"/home/lk57288c/2 Stage_Model/DRIVE_AV/test/mask\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/mask\",\n",
-    "#                     \"/home/lk57288c/2 Stage_Model/HRF_AV/test/mask\"\n",
-    "#                     ]\n",
+    "train_mask_dirs  = [\"DRIVE_AV/training/mask\", \n",
+    "                    \"DRIVE_AV/test/mask\",\n",
+    "                    \"HRF_AV/test/mask\",\n",
+    "                    \"HRF_AV/test/mask\"\n",
+    "                    ]\n",
     "\n",
     "seed = 42\n",
     "random.seed(seed); np.random.seed(seed); torch.manual_seed(seed); torch.cuda.manual_seed_all(seed)\n",
