--- a/UNet_with_ResNet34.ipynb
+++ b/UNet_with_ResNet34.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e96d85e6",
    "metadata": {},
    "outputs": [],
@@ -33,23 +33,12 @@
     "# ----------------------------\n",
     "# Config \n",
     "# ----------------------------\n",
-    "train_image_dirs = [\"DRIVE_AV/training/images\", \n",
-    "                    \"DRIVE_AV/test/images\",\n",
-    "                    \"HRF_AV/test/images\",\n",
-    "                    \"HRF_AV/test/images\"\n",
-    "                    ]\n",
     "\n",
-    "train_label_dirs = [\"DRIVE_AV/training/label\", \n",
-    "                    \"DRIVE_AV/test/label\",\n",
-    "                    \"HRF_AV/test/label\",\n",
-    "                    \"HRF_AV/test/label\"\n",
-    "                    ]\n",
+    "train_image_dirs = [\"DRIVE_AV/training/images\", \"DRIVE_AV/test/images\",\"HRF_AV/test/images\",\"HRF_AV/test/images\"]\n",
     "\n",
-    "train_mask_dirs  = [\"DRIVE_AV/training/mask\", \n",
-    "                    \"DRIVE_AV/test/mask\",\n",
-    "                    \"HRF_AV/test/mask\",\n",
-    "                    \"HRF_AV/test/mask\"\n",
-    "                    ]\n",
+    "train_label_dirs = [\"DRIVE_AV/training/label\", \"DRIVE_AV/test/label\", \"HRF_AV/test/label\", \"HRF_AV/test/label\"]\n",
+    "\n",
+    "train_mask_dirs  = [\"DRIVE_AV/training/mask\", \"DRIVE_AV/test/mask\",\"HRF_AV/test/mask\",\"HRF_AV/test/mask\"]\n",
     "\n",
     "seed = 42\n",
     "random.seed(seed); np.random.seed(seed); torch.manual_seed(seed); torch.cuda.manual_seed_all(seed)\n",
