--- a/UNetpp.ipynb
+++ b/UNetpp.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59a6cf6b",
    "metadata": {},
    "outputs": [],
@@ -45,26 +45,26 @@
     "# User-provided paths and device\n",
     "# -----------------------------\n",
     "train_image_dirs = [\n",
-    "    \"/home/lk57288c/RR_WNET/DRIVE_AV/training/images\",\n",
-    "    \"/home/lk57288c/RR_WNET/HRF_AV/training/images\",\n",
-    "    \"/home/lk57288c/RR_WNET/LES_AV/training/images\",\n",
+    "    \"DRIVE_AV/training/images\",\n",
+    "    \"HRF_AV/training/images\",\n",
+    "    \"LES_AV/training/images\",\n",
     "]\n",
     "train_label_dirs = [\n",
-    "    \"/home/lk57288c/RR_WNET/DRIVE_AV/training/label\",\n",
-    "    \"/home/lk57288c/RR_WNET/HRF_AV/training/label\",\n",
-    "    \"/home/lk57288c/RR_WNET/LES_AV/training/label\",\n",
+    "    \"DRIVE_AV/training/label\",\n",
+    "    \"HRF_AV/training/label\",\n",
+    "    \"LES_AV/training/label\",\n",
     "]\n",
     "train_mask_dirs = [\n",
-    "    \"/home/lk57288c/RR_WNET/DRIVE_AV/training/mask\",\n",
-    "    \"/home/lk57288c/RR_WNET/HRF_AV/training/mask\",\n",
-    "    \"/home/lk57288c/RR_WNET/LES_AV/training/mask\",\n",
+    "    \"DRIVE_AV/training/mask\",\n",
+    "    \"HRF_AV/training/mask\",\n",
+    "    \"LES_AV/training/mask\",\n",
     "]\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "# -----------------------------\n",
     "# Consolidate all datasets\n",
     "# -----------------------------\n",
-    "OUT_ROOT = \"/home/lk57288c/RR_WNET/AV_MERGED\"\n",
+    "OUT_ROOT = \"AV_MERGED\"\n",
     "IMG_OUT = f\"{OUT_ROOT}/images\"\n",
     "LAB_OUT = f\"{OUT_ROOT}/labels\"\n",
     "MSK_OUT = f\"{OUT_ROOT}/masks\"\n",
@@ -391,53 +391,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "759b3fa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # -----------------------------\n",
-    "# # Model factory (U-Net / U-Net++)\n",
-    "# # -----------------------------\n",
-    "# def make_model(arch=\"unet\", enc=\"resnet34\", num_classes=3):\n",
-    "#     if arch.lower() == \"unet++\":\n",
-    "#         model = smp.UnetPlusPlus(encoder_name=enc, encoder_weights=\"imagenet\",\n",
-    "#                                  in_channels=3, classes=num_classes)\n",
-    "#     else:\n",
-    "#         model = smp.Unet(encoder_name=enc, encoder_weights=\"imagenet\",\n",
-    "#                          in_channels=3, classes=num_classes)\n",
-    "#     return model\n",
-    "\n",
-    "# # -----------------------------\n",
-    "# # Loss: CE + Dice (on classes 1 and 2), ignore_index for crossings/uncertain\n",
-    "# # -----------------------------\n",
-    "# class DiceLoss(nn.Module):\n",
-    "#     def __init__(self, smooth=1e-5):\n",
-    "#         super().__init__()\n",
-    "#         self.smooth = smooth\n",
-    "#     def forward(self, logits, target):\n",
-    "#         # logits: B,C,H,W ; target: B,H,W in {0,1,2,255}\n",
-    "#         num_classes = logits.shape[1]\n",
-    "#         valid = (target != IGNORE_INDEX)\n",
-    "#         if valid.sum() == 0:\n",
-    "#             return torch.tensor(0., device=logits.device, requires_grad=True)\n",
-    "#         probs = F.softmax(logits, dim=1)\n",
-    "#         # compute dice for artery (1) and vein (2) only\n",
-    "#         dice_total = 0.0\n",
-    "#         for c in [1,2]:\n",
-    "#             pc = probs[:,c,:,:]\n",
-    "#             tc = (target==c).float()\n",
-    "#             pc = pc[valid]\n",
-    "#             tc = tc[valid]\n",
-    "#             inter = (pc*tc).sum()\n",
-    "#             den = pc.sum() + tc.sum()\n",
-    "#             dice = (2*inter + self.smooth)/(den + self.smooth)\n",
-    "#             dice_total += (1 - dice)\n",
-    "#         return dice_total/2.0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "9e321d95",
    "metadata": {},
@@ -504,110 +457,6 @@
     "            den = pc.sum() + tc.sum()\n",
     "            loss += 1 - (2*inter + self.smooth) / (den + self.smooth)\n",
     "        return loss / 2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "e9d83495",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # -----------------------------\n",
-    "# # Training / Validation\n",
-    "# # -----------------------------\n",
-    "# def train_loop(model, train_dl, val_dl, epochs=50, lr=3e-4, arch_tag=\"unet\"):\n",
-    "#     model = model.to(device)\n",
-    "#     ce = nn.CrossEntropyLoss(ignore_index=IGNORE_INDEX)\n",
-    "#     dice = DiceLoss()\n",
-    "#     opt = torch.optim.AdamW(model.parameters(), lr=lr, weight_decay=1e-4)\n",
-    "#     scaler = torch.cuda.amp.GradScaler(enabled=torch.cuda.is_available())\n",
-    "#     best_dice = 0.0\n",
-    "#     os.makedirs(f\"{OUT_ROOT}/ckpts\", exist_ok=True)\n",
-    "\n",
-    "#     for ep in range(1, epochs+1):\n",
-    "#         model.train()\n",
-    "#         tr_loss = 0.0\n",
-    "#         for img, mask, _ in tqdm(train_dl, desc=f\"Train {ep}/{epochs}\"):\n",
-    "#             img, mask = img.to(device), mask.to(device)\n",
-    "#             opt.zero_grad()\n",
-    "#             with torch.cuda.amp.autocast(enabled=torch.cuda.is_available()):\n",
-    "#                 logits = model(img)\n",
-    "#                 loss = ce(logits, mask) + 0.5*dice(logits, mask)\n",
-    "#             scaler.scale(loss).backward()\n",
-    "#             scaler.step(opt)\n",
-    "#             scaler.update()\n",
-    "#             tr_loss += loss.item()*img.size(0)\n",
-    "\n",
-    "#         # validation\n",
-    "#         model.eval()\n",
-    "#         tot, inter_a, union_a, inter_v, union_v = 0,0,0,0,0\n",
-    "#         with torch.no_grad():\n",
-    "#             for img, mask, _ in tqdm(val_dl, desc=\"Valid\"):\n",
-    "#                 img, mask = img.to(device), mask.to(device)\n",
-    "#                 logits = model(img)\n",
-    "#                 pred = logits.argmax(1)\n",
-    "#                 valid = (mask!=IGNORE_INDEX)\n",
-    "#                 tot += valid.sum().item()\n",
-    "#                 # IoU components for artery and vein\n",
-    "#                 for c, acc_inter, acc_union in [(1,'a','a'), (2,'v','v')]:\n",
-    "#                     p = (pred==c) & valid\n",
-    "#                     t = (mask==c) & valid\n",
-    "#                     inter = (p & t).sum().item()\n",
-    "#                     union = (p | t).sum().item()\n",
-    "#                     if c==1:\n",
-    "#                         inter_a += inter; union_a += union\n",
-    "#                     else:\n",
-    "#                         inter_v += inter; union_v += union\n",
-    "#         iou_a = inter_a/(union_a+1e-7)\n",
-    "#         iou_v = inter_v/(union_v+1e-7)\n",
-    "#         mean_iou = (iou_a + iou_v)/2\n",
-    "#         print(f\"Epoch {ep}: train_loss={tr_loss/len(train_dl.dataset):.4f} mIoU(AV)={mean_iou:.4f}\")\n",
-    "#         # save best\n",
-    "#         if mean_iou > best_dice:\n",
-    "#             best_dice = mean_iou\n",
-    "#             torch.save(model.state_dict(), f\"{OUT_ROOT}/ckpts/best_{arch_tag}.pt\")\n",
-    "#     return model\n",
-    "\n",
-    "# # -----------------------------\n",
-    "# # DataLoaders\n",
-    "# # -----------------------------\n",
-    "# BATCH = 4\n",
-    "# SIZE = 512\n",
-    "# train_ds = MultiAVSegDataset(OUT_ROOT, split=\"train\", img_size=SIZE, use_aug=True)\n",
-    "# val_ds   = MultiAVSegDataset(OUT_ROOT, split=\"val\", img_size=SIZE, use_aug=False)\n",
-    "# train_dl = DataLoader(train_ds, batch_size=BATCH, shuffle=True, num_workers=4, pin_memory=True)\n",
-    "# val_dl   = DataLoader(val_ds, batch_size=BATCH, shuffle=False, num_workers=4, pin_memory=True)\n",
-    "\n",
-    "# # -----------------------------\n",
-    "# # Choose architecture: \"unet\" or \"unet++\"\n",
-    "# # -----------------------------\n",
-    "# ARCH = \"unet++\"  # or \"unet\"\n",
-    "# model = make_model(arch=ARCH, enc=\"resnet34\", num_classes=3)\n",
-    "# model = train_loop(model, train_dl, val_dl, epochs=50, lr=3e-4, arch_tag=ARCH)\n",
-    "\n",
-    "# # -----------------------------\n",
-    "# # Inference and saving colored outputs (artery=red, vein=blue)\n",
-    "# # -----------------------------\n",
-    "# SAVE_PRED_DIR = f\"{OUT_ROOT}/pred_{ARCH}\"\n",
-    "# os.makedirs(SAVE_PRED_DIR, exist_ok=True)\n",
-    "\n",
-    "# def predict_and_save(model, dl, save_dir):\n",
-    "#     model.eval()\n",
-    "#     with torch.no_grad():\n",
-    "#         for img, mask, names in tqdm(dl, desc=\"Save predictions\"):\n",
-    "#             img = img.to(device)\n",
-    "#             logits = model(img)\n",
-    "#             pred = logits.argmax(1).cpu().numpy()\n",
-    "#             for p, name in zip(pred, names):\n",
-    "#                 color = decode_ids_to_rgb(p.astype(np.uint8))\n",
-    "#                 cv2.imwrite(os.path.join(save_dir, name), cv2.cvtColor(color, cv2.COLOR_RGB2BGR))\n",
-    "\n",
-    "# # reload best and save predictions on val split\n",
-    "# best = make_model(arch=ARCH, enc=\"resnet34\", num_classes=3).to(device)\n",
-    "# best.load_state_dict(torch.load(f\"{OUT_ROOT}/ckpts/best_{ARCH}.pt\", map_location=device))\n",
-    "# predict_and_save(best, val_dl, SAVE_PRED_DIR)\n",
-    "# print(\"Done.\")"
    ]
   },
   {
@@ -700,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cd92851d",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1268,7 @@
     }
    ],
    "source": [
-    "root = \"/home/lk57288c/RR_WNET/AV_MERGED\"        # where images/, labels/, masks/ exist\n",
+    "root = \"AV_MERGED\"        # where images/, labels/, masks/ exist\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "train_loader, val_loader = make_loaders(root, size=512, batch=4, workers=4, use_aug=True)\n",
     "\n",
@@ -1632,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5e801723",
    "metadata": {},
    "outputs": [
@@ -1660,14 +1509,14 @@
     }
    ],
    "source": [
-    "CKPT = \"/home/lk57288c/RR_WNET/AV_MERGED/best_unetpp.pt\"\n",
-    "OUT  = \"/home/lk57288c/RR_WNET/AV_MERGED/HRF_AV_TEST_PRED\"\n",
+    "CKPT = \"AV_MERGED/best_unetpp.pt\"\n",
+    "OUT  = \"AV_MERGED/HRF_AV_TEST_PRED\"\n",
     "\n",
     "evaluate_and_plot(\n",
     "    checkpoint_path=CKPT,\n",
-    "    image_dir=\"/home/lk57288c/RR_WNET/HRF_AV/test/images\",\n",
-    "    label_dir=\"/home/lk57288c/RR_WNET/HRF_AV/test/label\",\n",
-    "    mask_dir =\"/home/lk57288c/RR_WNET/HRF_AV/test/mask\",\n",
+    "    image_dir=\"HRF_AV/test/images\",\n",
+    "    label_dir=\"HRF_AV/test/label\",\n",
+    "    mask_dir =\"HRF_AV/test/mask\",\n",
     "    out_dir=OUT,\n",
     "    arch=\"unet++\",\n",
     "    encoder=\"resnet34\",\n",
@@ -1678,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "33c68f6f",
    "metadata": {},
    "outputs": [
@@ -1700,9 +1549,9 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "IMG_DIR = \"/home/lk57288c/RR_WNET/HRF_AV/test/images\"\n",
-    "GT_DIR  = \"/home/lk57288c/RR_WNET/HRF_AV/test/label\"\n",
-    "PR_DIR  = \"/home/lk57288c/RR_WNET/AV_MERGED/HRF_AV_TEST_PRED\"\n",
+    "IMG_DIR = \"HRF_AV/test/images\"\n",
+    "GT_DIR  = \"HRF_AV/test/label\"\n",
+    "PR_DIR  = \"AV_MERGED/HRF_AV_TEST_PRED\"\n",
     "\n",
     "# collect common filenames across the three folders\n",
     "def list_names(folder):\n",
