--- a/unet_with_efficientnet_b4.ipynb
+++ b/unet_with_efficientnet_b4.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e162a949",
    "metadata": {},
    "outputs": [
@@ -62,35 +62,21 @@
     }
    ],
    "source": [
-    "train_image_dirs = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/DRIVE_AV/training/images\", \n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/HRF_AV/training/images\",\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/Fundus-AVSeg/images\",\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/LES_AV/training/images\"]\n",
+    "train_image_dirs = [\"DRIVE_AV/training/images\", \"HRF_AV/training/images\", \"RR_WNET/Fundus-AVSeg/images\", \"RR_WNET/LES_AV/training/images\"]\n",
     "\n",
-    "train_label_dirs = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/DRIVE_AV/training/label\", \n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/HRF_AV/training/label\",\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/Fundus-AVSeg/annotation\",\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/LES_AV/training/label\"]\n",
+    "train_label_dirs = [\"DRIVE_AV/training/label\", \"HRF_AV/training/label\",\"RR_WNET/Fundus-AVSeg/annotation\",\"RR_WNET/LES_AV/training/label\"]\n",
     "\n",
-    "test_image_dirs1 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/DRIVE_AV/test/images\"]\n",
+    "test_image_dirs1 = [\"DRIVE_AV/test/images\"]\n",
     "\n",
-    "test_label_dirs1 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/DRIVE_AV/test/label\"]\n",
+    "test_label_dirs1 = [\"DRIVE_AV/test/label\"]\n",
     "\n",
-    "test_image_dirs2 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/HRF_AV/test/images\"]\n",
+    "test_image_dirs2 = [\"HRF_AV/test/images\"]\n",
     "\n",
-    "test_label_dirs2 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/HRF_AV/test/label\"]\n",
+    "test_label_dirs2 = [\"HRF_AV/test/label\"]\n",
     "\n",
-    "test_image_dirs3 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/LES_AV/test/images\"]\n",
+    "test_image_dirs3 = [\"RR_WNET/LES_AV/test/images\"]\n",
     "\n",
-    "test_label_dirs3 = [\n",
-    "    \"/mhgp004-v1/Nuvo-Chennai/lk57288c/RR_WNET/LES_AV/test/label\"]\n",
+    "test_label_dirs3 = [\"RR_WNET/LES_AV/test/label\"]\n",
     "\n",
     "def print_image_info(image_dirs, exts=(\".png\", \".jpg\", \".jpeg\", \".tif\")):\n",
     "    all_images = []\n",
@@ -581,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b0bf8bad",
    "metadata": {},
    "outputs": [],
@@ -591,8 +577,8 @@
     "    encoder=\"efficientnet-b4\", \n",
     "    classes=4, \n",
     "    pretrained=True,\n",
-    "    vessel_ckpt_path=\"/mhgp004-v1/Nuvo-Chennai/lk57288c/unetpp_drive_best.pth\",\n",
-    "    # vessel_ckpt_path=\"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/D2_UnetPlusPlus_0.833.pth\",\n",
+    "    vessel_ckpt_path=\"unetpp_drive_best.pth\",\n",
+    "    # vessel_ckpt_path=\"D2_UnetPlusPlus_0.833.pth\",\n",
     "    device=torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "):\n",
     "    \"\"\"\n",
@@ -645,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "edb1f38e",
    "metadata": {},
    "outputs": [],
@@ -734,14 +720,6 @@
     "        history.append(log)\n",
     "        print(log)\n",
     "\n",
-    "        # mean_fg = float(va_dice[1:].mean())\n",
-    "        # if mean_fg > best_val:\n",
-    "        #     best_val = mean_fg\n",
-    "        #     torch.save(\n",
-    "        #         {\"model\": model.state_dict(), \"arch\": type(model).__name__, \"num_classes\": num_classes},\n",
-    "        #         os.path.join(out_dir, \"2stg_best.pt\"),\n",
-    "        #     )\n",
-    "\n",
     "    with open(os.path.join(out_dir, history_path), \"w\") as f:\n",
     "        json.dump(history, f, indent=2)\n",
     "\n",
@@ -750,23 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a21c6830",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# NUM_CLASSES = 4\n",
-    "# device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "# # Case 1 – Efficientnet encoder (default)\n",
-    "# model = build_model(arch=\"unet++\", encoder=\"efficientnet-b4\", classes=NUM_CLASSES, pretrained=True)\n",
-    "\n",
-    "# model = fit(model, train_loader, val_loader, epochs=20, lr=3e-4, out_dir=\"./av_runs\", num_classes=NUM_CLASSES, device=device, history_path = \"M1_history.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b2378677",
    "metadata": {},
    "outputs": [],
@@ -847,14 +809,12 @@
     "        plt.savefig(filename, bbox_inches=\"tight\")\n",
     "        print(f\"Saved visualization: {filename}\")\n",
     "\n",
-    "        plt.show()\n",
-    "\n",
-    "# visualize_validation_samples(model, val_loader, device, colorize_mask, num_samples=3, save_dir=\"./av_runs/val_viz\")"
+    "        plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "49050675",
    "metadata": {},
    "outputs": [],
@@ -912,14 +872,12 @@
     "        print(f\"  Crossing   : {mean_ious[3]:.4f}\")\n",
     "        print(f\"\\nMean IoU (artery/vein/cross): {mean_miou:.4f}\")\n",
     "\n",
-    "    return mean_ious, mean_miou\n",
-    "\n",
-    "# mean_ious, mean_miou = evaluate_iou(model, val_loader, device, compute_iou_per_class)"
+    "    return mean_ious, mean_miou"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "75f874f7",
    "metadata": {},
    "outputs": [],
@@ -1006,15 +964,12 @@
     "            plt.suptitle(name); plt.tight_layout()\n",
     "            out_path = os.path.join(save_dir, f\"{os.path.splitext(name)[0]}_viz.png\")\n",
     "            plt.savefig(out_path, dpi=150)\n",
-    "            plt.close()\n",
-    "\n",
-    "# show 6 test predictions on screen, and also save PNGs\n",
-    "# plot_test_predictions(model, test_loader, device, num_samples=3, save_dir=\"./av_runs/test_viz\")\n"
+    "            plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4880a17e",
    "metadata": {},
    "outputs": [],
@@ -1074,9 +1029,7 @@
     "    print(f\"  Crossing   : {mean_ious[3]:.4f}\")\n",
     "    print(f\"\\nMean IoU (artery/vein/cross): {mean_miou:.4f}\")\n",
     "\n",
-    "    return mean_ious, mean_miou\n",
-    "\n",
-    "# mean_ious, mean_miou = evaluate_dataset_iou(model, test_loader, device, compute_iou_per_class, num_classes=4, split_name=\"Test\")\n"
+    "    return mean_ious, mean_miou"
    ]
   },
   {
@@ -1199,7 +1152,7 @@
    "source": [
     "# D2_UnetPlusPlus_0\n",
     "\n",
-    "model2 = build_model(arch=\"unet++\", encoder=\"efficientnet-b4\", classes=NUM_CLASSES, pretrained=\"vessel\", vessel_ckpt_path=\"/mhgp004-v1/Nuvo-Chennai/lk57288c/2 Stage_Model/D2_UnetPlusPlus_0.833.pth\")\n",
+    "model2 = build_model(arch=\"unet++\", encoder=\"efficientnet-b4\", classes=NUM_CLASSES, pretrained=\"vessel\", vessel_ckpt_path=\"D2_UnetPlusPlus_0.833.pth\")\n",
     "\n",
     "model = fit(model2, train_loader, val_loader, epochs=50, lr=3e-4, out_dir=\"./av_runs\", num_classes=NUM_CLASSES, device=device, history_path = \"M2_history.json\")\n",
     "\n",
@@ -1214,144 +1167,6 @@
     "\n",
     "plot_test_predictions(model, test_loader3, device, num_samples=11, save_dir=\"./M2_av_runs/les_test\")\n",
     "mean_ious, mean_miou = evaluate_dataset_iou(model, test_loader3, device, compute_iou_per_class, num_classes=4, split_name=\"Test3\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "654c3bb0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# import cv2\n",
-    "# import numpy as np\n",
-    "# from glob import glob\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # BGR → class index mapping\n",
-    "# # --------------------------------------------------\n",
-    "# COLOR_TOL = 30\n",
-    "\n",
-    "# def bgr_to_class(mask_bgr, tol=COLOR_TOL):\n",
-    "#     mb = mask_bgr[..., 0].astype(np.int16)\n",
-    "#     mg = mask_bgr[..., 1].astype(np.int16)\n",
-    "#     mr = mask_bgr[..., 2].astype(np.int16)\n",
-    "\n",
-    "#     lab = np.zeros(mask_bgr.shape[:2], dtype=np.uint8)\n",
-    "#     assigned = np.zeros(mask_bgr.shape[:2], dtype=bool)\n",
-    "\n",
-    "#     def assign(b, g, r, cls):\n",
-    "#         cond = (np.abs(mb - b) <= tol) & (np.abs(mg - g) <= tol) & (np.abs(mr - r) <= tol) & (~assigned)\n",
-    "#         lab[cond] = cls\n",
-    "#         assigned[cond] = True\n",
-    "\n",
-    "#     # mapping\n",
-    "#     for (b, g, r), cls in [((0,0,255),1), ((255,0,0),2), ((0,255,0),3)]:\n",
-    "#         assign(b,g,r,cls)\n",
-    "\n",
-    "#     lab[~assigned] = 0\n",
-    "#     return lab\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # Metrics\n",
-    "# # --------------------------------------------------\n",
-    "# def dice_score(gt, pred, cls):\n",
-    "#     gt_c = (gt == cls)\n",
-    "#     pred_c = (pred == cls)\n",
-    "\n",
-    "#     inter = np.logical_and(gt_c, pred_c).sum()\n",
-    "#     denom = gt_c.sum() + pred_c.sum()\n",
-    "\n",
-    "#     if denom == 0:\n",
-    "#         return 1.0\n",
-    "#     return 2 * inter / denom\n",
-    "\n",
-    "# def iou_score(gt, pred, cls):\n",
-    "#     gt_c = (gt == cls)\n",
-    "#     pred_c = (pred == cls)\n",
-    "\n",
-    "#     inter = np.logical_and(gt_c, pred_c).sum()\n",
-    "#     union = np.logical_or(gt_c, pred_c).sum()\n",
-    "\n",
-    "#     if union == 0:\n",
-    "#         return 1.0\n",
-    "#     return inter / union\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # Paths\n",
-    "# # --------------------------------------------------\n",
-    "\n",
-    "# # label_dir = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/Drive lable\"\n",
-    "# # pred_dir  = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/Drive_automorph\"\n",
-    "\n",
-    "# label_dir = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/HRF label\"\n",
-    "# pred_dir  = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/HRF_automorph\"\n",
-    "\n",
-    "# # label_dir = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/LES label\"\n",
-    "# # pred_dir  = \"/mhgp004-v1/Nuvo-Chennai/lk57288c/Automorph outputs/LES_automorph\"\n",
-    "\n",
-    "# label_paths = sorted(glob(os.path.join(label_dir, \"*\")))\n",
-    "# pred_paths  = sorted(glob(os.path.join(pred_dir, \"*\")))\n",
-    "\n",
-    "# assert len(label_paths) == len(pred_paths), \"Label & prediction count mismatch!\"\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # Accumulators\n",
-    "# # --------------------------------------------------\n",
-    "# dice_sum = np.zeros(4, dtype=np.float64)\n",
-    "# iou_sum  = np.zeros(4, dtype=np.float64)\n",
-    "\n",
-    "# N = len(label_paths)\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # Main Loop\n",
-    "# # --------------------------------------------------\n",
-    "# for lp, pp in zip(label_paths, pred_paths):\n",
-    "#     lab = cv2.imread(lp)\n",
-    "#     pred = cv2.imread(pp)\n",
-    "\n",
-    "#     if lab is None or pred is None:\n",
-    "#         print(f\"Could not read: {lp} or {pp}\")\n",
-    "#         continue\n",
-    "\n",
-    "#     # ---- FIX: Resize prediction to label size ----\n",
-    "#     H, W = lab.shape[:2]\n",
-    "#     pred = cv2.resize(pred, (W, H), interpolation=cv2.INTER_NEAREST)\n",
-    "\n",
-    "#     # Convert to class maps\n",
-    "#     lab_class  = bgr_to_class(lab)\n",
-    "#     pred_class = bgr_to_class(pred)\n",
-    "\n",
-    "#     # Per-class metrics\n",
-    "#     for cls in range(4):\n",
-    "#         dice_sum[cls] += dice_score(lab_class, pred_class, cls)\n",
-    "#         iou_sum[cls]  += iou_score(lab_class, pred_class, cls)\n",
-    "\n",
-    "\n",
-    "# dice_avg = dice_sum / N\n",
-    "# iou_avg  = iou_sum / N\n",
-    "# mean_iou = (iou_avg[1] + iou_avg[2] + iou_avg[3]) / 3.0\n",
-    "\n",
-    "# # --------------------------------------------------\n",
-    "# # Output\n",
-    "# # --------------------------------------------------\n",
-    "# print(\"\\n===================== RESULTS =====================\")\n",
-    "# print(\"Per-class Dice:\")\n",
-    "# print(f\"  Background: {dice_avg[0]:.4f}\")\n",
-    "# print(f\"  Artery:     {dice_avg[1]:.4f}\")\n",
-    "# print(f\"  Vein:       {dice_avg[2]:.4f}\")\n",
-    "# print(f\"  Crossing:   {dice_avg[3]:.4f}\")\n",
-    "\n",
-    "# print(\"\\nPer-class IoU:\")\n",
-    "# print(f\"  Background: {iou_avg[0]:.4f}\")\n",
-    "# print(f\"  Artery:     {iou_avg[1]:.4f}\")\n",
-    "# print(f\"  Vein:       {iou_avg[2]:.4f}\")\n",
-    "# print(f\"  Crossing:   {iou_avg[3]:.4f}\")\n",
-    "\n",
-    "# print(\"\\nMean IoU (artery / vein / crossing):\")\n",
-    "# print(f\"  Mean IoU: {mean_iou:.4f}\")\n",
-    "# print(\"===================================================\\n\")\n"
    ]
   },
   {
